--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet"> 
     <title>Fake Google</title>
 </head>
+
 <body>
-    Hi there
+    <div class="top-bar">
+        <div class="bar-right">
+          <div class="menu">
+            <a href="">Gmail</a>
+            <a href="">Imagens</a>
+          </div>
+          <a href="" class="app-toggle">
+          </a>
+          <a href="" class="profile-trigger">
+            <img src="imagens/profile.jpg">
+          </a>
+        </div>
+      </div>
+
+      <div class="content">
+        <div class="search-wrapper">
+          <a href="" class="search-logo">
+            <img src="imagens/google.jpg">
+          </a>
+          <div class="search-bar">
+            <div class="search-icon">
+                <img src="imagens/lupa.png">
+            </div>
+            <input type="text">
+            <div class="search-icon right">
+				<img src="imagens/keyboard.png">
+				<img src="imagens/"mic.png">
+            </div>
+          </div>
+          <div class="search-buttons">
+            <a href="">Pesquisa Google</a>
+            <a href="">Estou com sorte</a>
+          </div>
+          <p class="search-info">
+            Disponibilizado pelo Google em: <a href="">English</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="bottom-bar">
+        <div class="bar-left">
+          <div class="menu">
+            <a href="">Publicidade</a>
+            <a href="">Negócios</a>
+            <a href="">Sobre</a>
+            <a href="">Como funciona a Pesquisa</a>
+          </div>
+        </div>
+        <div class="bar-right">
+          <div class="menu">
+            <a href="">Privacidade</a>
+            <a href="">Termos</a>
+            <a href="">Configurações</a>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
